--- a/CMDb/Base.lproj/Search.storyboard
+++ b/CMDb/Base.lproj/Search.storyboard
@@ -12,8 +12,8 @@
         <!--SearchTVC-->
         <scene sceneID="TbQ-xU-sae">
             <objects>
-                <tableViewController storyboardIdentifier="SearchTVC" id="Ksu-eY-Xy3" customClass="SearchTVC" customModule="CMDb" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="151" estimatedRowHeight="151" sectionHeaderHeight="28" sectionFooterHeight="28" id="pxH-uo-IJZ">
+                <tableViewController storyboardIdentifier="SearchTVC" automaticallyAdjustsScrollViewInsets="NO" id="Ksu-eY-Xy3" customClass="SearchTVC" customModule="CMDb" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" keyboardDismissMode="onDrag" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="151" estimatedRowHeight="151" sectionHeaderHeight="28" sectionFooterHeight="28" id="pxH-uo-IJZ">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
@@ -25,45 +25,47 @@
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="150.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="mJ7-5t-0gP">
-                                            <rect key="frame" x="15" y="8" width="92" height="135"/>
-                                            <constraints>
-                                                <constraint firstAttribute="height" constant="135" id="6pO-KX-3qC"/>
-                                                <constraint firstAttribute="width" constant="92" id="vOH-HF-9lY"/>
-                                            </constraints>
-                                        </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.84999999999999998" translatesAutoresizingMaskIntoConstraints="NO" id="ktU-8t-bDo">
-                                            <rect key="frame" x="115" y="8" width="240" height="21"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Year" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="z13-a8-MiJ">
-                                            <rect key="frame" x="115" y="31" width="240" height="17"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                            <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Overview" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bhr-jX-QHY">
-                                            <rect key="frame" x="115" y="50" width="240" height="18"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
+                                        <stackView opaque="NO" contentMode="scaleToFill" alignment="top" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="YH5-et-Jgc">
+                                            <rect key="frame" x="15" y="8" width="352" height="135"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="mJ7-5t-0gP">
+                                                    <rect key="frame" x="0.0" y="0.0" width="92" height="135"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="135" id="6pO-KX-3qC"/>
+                                                        <constraint firstAttribute="width" constant="92" id="vOH-HF-9lY"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Cgn-5k-DbU">
+                                                    <rect key="frame" x="102" y="0.0" width="250" height="55.5"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.84999999999999998" translatesAutoresizingMaskIntoConstraints="NO" id="ktU-8t-bDo">
+                                                            <rect key="frame" x="0.0" y="0.0" width="250" height="20.5"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Year" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="z13-a8-MiJ">
+                                                            <rect key="frame" x="0.0" y="20.5" width="250" height="17"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                            <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Overview" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bhr-jX-QHY">
+                                                            <rect key="frame" x="0.0" y="37.5" width="250" height="18"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                </stackView>
+                                            </subviews>
+                                        </stackView>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="ktU-8t-bDo" firstAttribute="leading" secondItem="mJ7-5t-0gP" secondAttribute="trailing" constant="8" symbolic="YES" id="GCs-MG-FgV"/>
-                                        <constraint firstItem="bhr-jX-QHY" firstAttribute="top" secondItem="z13-a8-MiJ" secondAttribute="bottom" constant="2" id="H52-5E-NvD"/>
-                                        <constraint firstItem="mJ7-5t-0gP" firstAttribute="leading" secondItem="F66-Cu-k04" secondAttribute="leading" constant="15" id="IRK-Pa-8r7"/>
-                                        <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="bhr-jX-QHY" secondAttribute="bottom" constant="8" id="UAL-t4-ZsH"/>
-                                        <constraint firstItem="mJ7-5t-0gP" firstAttribute="top" secondItem="F66-Cu-k04" secondAttribute="top" constant="8" id="W5I-bd-DJR"/>
-                                        <constraint firstItem="z13-a8-MiJ" firstAttribute="top" secondItem="ktU-8t-bDo" secondAttribute="bottom" constant="2" id="bNA-27-YbY"/>
-                                        <constraint firstItem="bhr-jX-QHY" firstAttribute="trailing" secondItem="z13-a8-MiJ" secondAttribute="trailing" id="dTh-uw-mcp"/>
-                                        <constraint firstItem="z13-a8-MiJ" firstAttribute="leading" secondItem="ktU-8t-bDo" secondAttribute="leading" id="iz8-nd-ICe"/>
-                                        <constraint firstAttribute="trailing" secondItem="ktU-8t-bDo" secondAttribute="trailing" constant="20" symbolic="YES" id="jgw-NO-suk"/>
-                                        <constraint firstItem="ktU-8t-bDo" firstAttribute="top" secondItem="mJ7-5t-0gP" secondAttribute="top" id="m1T-Ds-15Q"/>
-                                        <constraint firstItem="bhr-jX-QHY" firstAttribute="leading" secondItem="z13-a8-MiJ" secondAttribute="leading" id="oKt-mv-ksf"/>
-                                        <constraint firstItem="z13-a8-MiJ" firstAttribute="trailing" secondItem="ktU-8t-bDo" secondAttribute="trailing" id="rjT-lz-On4"/>
+                                        <constraint firstAttribute="bottom" secondItem="YH5-et-Jgc" secondAttribute="bottom" constant="7.5" id="1Um-Qo-iwL"/>
+                                        <constraint firstItem="YH5-et-Jgc" firstAttribute="leading" secondItem="F66-Cu-k04" secondAttribute="leading" constant="15" id="Bmc-GU-jQn"/>
+                                        <constraint firstAttribute="trailing" secondItem="YH5-et-Jgc" secondAttribute="trailing" constant="8" id="LOI-sc-WVV"/>
+                                        <constraint firstItem="YH5-et-Jgc" firstAttribute="top" secondItem="F66-Cu-k04" secondAttribute="top" constant="8" id="MzW-wI-pRN"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
@@ -74,21 +76,21 @@
                                     <outlet property="yearLabel" destination="z13-a8-MiJ" id="h4e-lp-foK"/>
                                 </connections>
                             </tableViewCell>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="LoadingTableCell" rowHeight="54" id="JRZ-AY-hFZ" customClass="LoadingTableCell" customModule="CMDb" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="179" width="375" height="54"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="LoadingTableCell" id="JRZ-AY-hFZ" customClass="LoadingTableCell" customModule="CMDb" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="179" width="375" height="151"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="JRZ-AY-hFZ" id="mtd-GH-MnR">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="53.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="150.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="O9V-lj-dlh">
-                                            <rect key="frame" x="128" y="0.0" width="119" height="53.5"/>
+                                            <rect key="frame" x="128" y="0.0" width="119" height="150.5"/>
                                             <subviews>
                                                 <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" animating="YES" style="white" translatesAutoresizingMaskIntoConstraints="NO" id="GJq-ba-hfg">
-                                                    <rect key="frame" x="0.0" y="0.0" width="20" height="53.5"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="20" height="150.5"/>
                                                 </activityIndicatorView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Searching..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bEb-Gp-ovd">
-                                                    <rect key="frame" x="28" y="0.0" width="91" height="53.5"/>
+                                                    <rect key="frame" x="28" y="0.0" width="91" height="150.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
@@ -98,6 +100,7 @@
                                             <constraints>
                                                 <constraint firstItem="GJq-ba-hfg" firstAttribute="leading" secondItem="O9V-lj-dlh" secondAttribute="leading" id="1FB-BD-EbA"/>
                                                 <constraint firstItem="bEb-Gp-ovd" firstAttribute="bottom" secondItem="GJq-ba-hfg" secondAttribute="bottom" id="Dtz-48-4iq"/>
+                                                <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="44" id="IOG-Xl-dTO"/>
                                                 <constraint firstAttribute="bottom" secondItem="GJq-ba-hfg" secondAttribute="bottom" id="XtR-Sw-0Ct"/>
                                                 <constraint firstItem="GJq-ba-hfg" firstAttribute="top" secondItem="O9V-lj-dlh" secondAttribute="top" id="cc9-OY-xHG"/>
                                                 <constraint firstAttribute="trailing" secondItem="bEb-Gp-ovd" secondAttribute="trailing" id="gMF-AH-hWJ"/>
